--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -132,6 +132,20 @@ include tests/rem_dup_elems1_sub.py
 include tests/reference_simpletype.xsd
 include tests/reference_simpletype1_sup.py
 include tests/reference_simpletype1_sub.py
+include tests/defaults_cases_always.xsd
+include tests/defaults_cases_always1_out.xml
+include tests/defaults_cases_always1_sub.py
+include tests/defaults_cases_always1_sup.py
+include tests/defaults_cases_always.xml
+include tests/no_namespace_defs.xsd
+include tests/no_namespace_defs1_sub.py
+include tests/no_namespace_defs1_sup.py
+include tests/mixedcontent.xsd
+include tests/mixedcontent.xml
+include tests/mixedcontent1_out.xml
+include tests/mixedcontent1_sub.py
+include tests/mixedcontent1_sup.py
+include tests/check_results.rb
 
 include gui/generateds_gui.py
 include gui/generateds_gui.glade
